tests/Unit/PHPStan/Rules/Fixtures/SingleClassPerFile/Valid/SingleInterface.php
<?php

declare(strict_types=1);

namespace Fixture\SingleClassPerFile\Valid;

interface SingleInterface {}
