tests/Unit/PHPStan/Rules/Fixtures/SingleClassPerFile/Invalid/ClassAndTrait.php
<?php

declare(strict_types=1);

namespace Fixture\SingleClassPerFile\Invalid;

class ClassAndTraitClass {}

trait ClassAndTraitTrait {}
